assets/css/style.css
body{
    overflow-x: hidden;
    background-color: white;
}
/* basic styling for the navbar */
li{
    margin-left:20px;
    font-size: 20px;  
}

 
.navbar-brand {
    margin-left:20px;
    font-size: 30px; 
    
}

.navbar-dark .navbar-brand {
    color: rgb(255, 209, 110);
}

.navbar-dark .navbar-nav .nav-link.active,
.navbar-dark .navbar-nav .nav-link:hover {
    color: rgb(255, 209, 110);
}


.navbar-dark .navbar-nav .show > .nav-link,
.navbar-dark .navbar-nav .active > .nav-link,
.navbar-dark .navbar-nav .nav-link.show,
.navbar-dark .navbar-nav .nav-link.active{
    color: rgb(255, 209, 110);
}

/* end of navbar styling */

/* styling the lading/home page, image style and caption style */

.home-inner img{
    width:100%;
    max-width:100%;
    z-index: -1;
    opacity: 0.8;
}

.caption{
    width:100%;
    max-width:100%;
    position: absolute;
    top: 38%;
    z-index: 1;
    color:white;
    text-transform: uppercase;

}

.caption h1{
    font-size: 60px;
    font-weight:bold;
    letter-spacing: 5px;
    text-shadow: 2px 2px 10px black;
}
/* end of landing page styling */

/* styling the general main body and the about page */

.main-body{
    margin: 20px;
    padding: 20px;
    /* background-color: rgb(252, 221, 226); */
}
/* #about {
    margin-left: 20px;
    margin-right:20px;
    padding:20px;
    
} */

/* end of about page styling */

/* styling of hobbies page with the id of portfolio */
#portfolio{
    padding:20px;

    background-color: rgb(177, 222, 252);
}


.sp1{
    color: rgb(186, 65, 190)
}
.sp2{
    color: rgb(65, 186, 190)
}

#portfolio img{
    width:200px;
    float:left;
}

/* end of hobbies page styling */

/* styling for the footer/social media link page */
.social-media a{
    padding: 20px;
}

.pads{
    padding:20px;
}

/* end of styling */

